<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/relative_layout_margin_bottom">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/iv_profileImage"
                android:layout_width="@dimen/circular_image_width"
                android:layout_height="@dimen/circular_image_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/circular_image_start"
                android:layout_marginTop="@dimen/circular_image_top"
                app:civ_border_width="@dimen/civ_border_width"
                tools:src="@drawable/blue" />

            <RatingBar
                android:id="@+id/rb_ratings"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_profileImage"
                android:layout_alignStart="@+id/iv_profileImage"
                android:layout_marginTop="@dimen/rating_bar_margin_top"
                android:numStars="5"
                android:theme="@style/RatingBar" />

            <ImageView
                android:layout_width="@dimen/total_rating_width"
                android:layout_height="@dimen/total_rating_height"
                android:layout_below="@+id/rb_ratings"
                android:layout_alignStart="@id/iv_profileImage"
                android:layout_marginStart="@dimen/total_rating_start"
                android:layout_marginTop="@dimen/total_rating_margin_top"
                android:contentDescription="@string/rating"
                android:src="@drawable/ic_male_user_shadow" />

            <TextView
                android:id="@+id/tv_total_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rb_ratings"
                android:layout_marginStart="@dimen/total_rating_text__width"
                android:layout_marginTop="@dimen/total_rating_text__top"
                android:textSize="@dimen/total_rating_text__size"
                tools:text="3843" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rb_ratings"
                android:layout_marginStart="@dimen/total_text__start"
                android:layout_marginTop="@dimen/total_text__top"
                android:layout_toEndOf="@+id/tv_total_rating"
                android:text="@string/total"
                android:textSize="@dimen/total_rating_text__size" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/iv_profileImage"
                android:layout_marginStart="@dimen/name_margin_start"
                android:layout_toEndOf="@+id/iv_profileImage"
                android:textSize="@dimen/name_size"
                android:textStyle="bold"
                tools:text="Aaman" />

            <TextView
                android:id="@+id/tv_specialist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_alignStart="@+id/tv_name"
                android:layout_marginTop="@dimen/specialist_margin_top"
                android:textSize="@dimen/specialist_text_size"
                tools:text="Numerology" />

            <TextView
                android:id="@+id/tv_languages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_specialist"
                android:layout_alignStart="@id/tv_name"
                android:layout_marginTop="@dimen/language_marin_top"
                android:textSize="@dimen/language_text_size"
                tools:text="English,hindi,Punjabi" />

            <TextView
                android:id="@+id/tv_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_languages"
                android:layout_alignStart="@+id/tv_name"
                android:layout_marginTop="@dimen/experience_marin_top"
                android:textSize="@dimen/experience_text_size"
                tools:text="Exp:5Years" />

            <TextView
                android:id="@+id/tv_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_experience"
                android:layout_alignStart="@+id/tv_name"
                android:layout_marginTop="@dimen/charge_margin_top"
                android:textSize="@dimen/charge_text_size"
                tools:text="$32/minute" />

            <ImageView
                android:id="@+id/iv_verify"
                android:layout_width="@dimen/verify_width"
                android:layout_height="@dimen/verify_height"
                android:layout_alignStart="@+id/btn_chat"
                android:layout_alignTop="@id/tv_name"
                android:layout_marginStart="@dimen/verify_margin_start"
                android:layout_toEndOf="@+id/tv_languages"
                android:contentDescription="@string/verify"
                android:src="@drawable/ic_correct" />

            <ImageView
                android:id="@+id/iv_bell"
                android:layout_width="@dimen/bell_icon_width"
                android:layout_height="@dimen/bell_icon_height"
                android:layout_alignTop="@id/tv_name"
                android:layout_marginStart="@dimen/bell_icon_start"
                android:layout_toEndOf="@id/iv_verify"
                android:contentDescription="@string/bell"
                android:src="@drawable/ic_bell"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_chat"
                android:layout_width="@dimen/chat_button_width"
                android:layout_height="@dimen/chat_button_height"
                android:layout_alignBottom="@+id/tv_charge"
                android:layout_marginStart="@dimen/chat_button_start"
                android:background="@drawable/btn_background"
                android:text="@string/chat"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/tv_wait_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_chat"
                android:layout_alignStart="@+id/btn_chat"
                android:layout_marginStart="@dimen/wait_time_start"
                android:layout_marginTop="@dimen/wait_time_top"
                android:maxLines="1"
                android:text="@string/wait_time"
                android:textColor="@color/red"
                android:textSize="@dimen/wait_time_text_size"
                android:visibility="gone" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>